[FANCOM-ADDON] - :round_pushpin: addon description addded

--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "fancom-addon",
   "title": "fancom-addon",
   "id": "jid1-5pDNR3MSiFys9Q",
-  "description": "a basic add-on",
+  "description": "Remove emoji trash from PR fields in GH",
   "author": "Michał Budzyński <michal@virtualdesign.pl",
   "license": "MPL 2.0",
   "version": "1.0"
