--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "title": "fancom-addon",
   "id": "jid1-5pDNR3MSiFys9Q",
   "description": "a basic add-on",
-  "author": "",
+  "author": "Michał Budzyński <michal@virtualdesign.pl",
   "license": "MPL 2.0",
-  "version": "0.1"
+  "version": "1.0"
 }
